src/scss/page/_general.scss
body {
    background-color: #d9d6d6;
}

.container {
    //opacity:.99;
    position: relative;
    padding-top: 20px;
    padding-bottom: 20px;
    z-index: 100;
    box-shadow: 0 0 20px -4px rgba(0, 0, 0, 0.75);
}

.person-profile .details img {
    width: 100%;
    //padding-bottom: 20px;
}

.person-profile .contact {
    font-size: 15px;

    @media (max-width: $screen-xs-max) {
        padding-top: 15px;
    }

    ul li i.glyphicon {
        padding: 3px;
        line-height: 18px;
    }
}

.person-profile-grid {
    p, br {
        display: none;
    }
    select {
        font-size: 1.25em;
    }
    .row {
        display: table;
        width: 100%;
        margin: 0 auto !important;

        .person-profile-wrap {
            p {
                margin: 0;
            }

            /*display: block;
            padding: 0;
            position: relative;
            margin: 0;
            float: left;
            width: 50%;
            @media (min-width:$screen-xs-max){
                width:25%;
            }
            overflow: hidden;*/

            a, & {
                .group {
                    position: absolute;
                    bottom: 20px;
                    right: 20px;
                    display: block;
                    width: 100%;
                    //height: 90px;
                    text-align: right;
                    bottom: 0;
                    left: 0;
                    font-size: 18px;
                    line-height: 90px;
                    font-weight: 700;
                    text-transform: uppercase;
                    padding-right: 5px;
                    color: #fff;
                    -webkit-box-sizing: border-box;
                    -moz-box-sizing: border-box;
                    box-sizing: border-box;
                    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%);
                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.6)));
                    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);
                    background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);
                    background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);
                    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);

                    .group-inner {
                        line-height: normal;
                        vertical-align: bottom;
                        display: inline-block;
                        //padding-bottom: 10px;
                        opacity: 1;
                        transition: opacity 0.5s ease;
                    }
                }

                img {
                    transition: transform 0.5s ease;
                }

                .profile-short {
                    transition: opacity 0.5s ease;
                    color: #fff;
                    padding: 5px;
                    position: absolute;
                    top: 40%;
                    text-align: center;
                    left: 0;
                    width: 100%;
                    opacity: 0;

                    .title {
                        text-transform: uppercase;
                        font-size: 18px;
                        line-height: 1;
                    }

                    small {
                        display: block;
                        color: #fff;
                        text-transform: none;
                    }
                }

                .overlay {
                    width: 100%;
                    height: 100%;
                    position: absolute;
                    top: 0;
                    transition: background-color 0.5s ease;
                }
                /*.profile-long{
                visibility:hidden;
            }
            .profile-long:target{
                visibility:visible;
            }*/
            }

            &:hover a, &:hover {
                .group {
                    .group-inner {
                        opacity: 0;
                    }
                }

                .overlay {
                    background-color: rgba(0, 0, 0, 0.50);
                }

                .profile-short {
                    opacity: 1;
                    z-index: 1000;
                }

                img {
                    -ms-transform: scale(1.2, 1.2); /* IE 9 */
                    -webkit-transform: scale(1.2, 1.2); /* Safari */
                    transform: scale(1.2, 1.2);
                }
            }
        }
    }
}

// Subpages - title
#page-title {
    //border-bottom: 1px dotted #333;
    margin-bottom: 10px;
    padding-bottom: 10px;

    @media (max-width: $screen-xs-max) {
        margin-bottom: 15px;
        overflow: hidden;
        padding-bottom: 5px;
    }

    h1 {
        font-weight: normal;
    }

    #weather_bug {
        @media (max-width: $screen-xs-max) {
            display: none;
        }
    }

    #wb_status_txt {
        @media (max-width: $screen-sm-max) {
            font-size: 11.5px;
        }
    }
}


// Subpages - Sidebars - General
.sidebar_title {
    font-family: $font-family-sans-serif;
    font-size: 10.5px;
    font-weight: 700;
    letter-spacing: 1px;
    line-height: 12px;
    padding-bottom: 8px;
    text-transform: uppercase;
}

.sidebar_nav {
    font-family: $font-family-sans-serif;
    font-size: 13px;
    margin-bottom: 20px;

    a {
        color: #333;
        font-weight: normal;

        &:hover {
            color: #e50606;
            text-decoration: underline;
        }
    }
}

.notoppad {
    padding-top: 0 !important;
}
/* ... */

